eglincludedir = $(includedir)/EGL
eglinclude_HEADERS = \
	EGL/egl.h \
	EGL/eglext.h \
	EGL/eglmesaext.h \
	EGL/eglplatform.h

glesincludedir = $(includedir)/GLES
glesinclude_HEADERS = \
	GLES/egl.h \
	GLES/gl.h \
	GLES/glext.h \
	GLES/glplatform.h

gles2includedir = $(includedir)/GLES2
gles2include_HEADERS = \
	GLES2/gl2.h \
	GLES2/gl2ext.h \
	GLES2/gl2platform.h

khrincludedir = $(includedir)/KHR
khrinclude_HEADERS = \
	KHR/khrplatform.h

clincludedir = $(includedir)/CL
clinclude_HEADERS = \
	CL/cl_ext.h \
	CL/cl_gl_ext.h \
	CL/cl_gl.h \
	CL/cl.h \
	CL/cl.hpp \
	CL/cl_platform.h \
	CL/opencl.h

vgincludedir = $(includedir)/VG
vginclude_HEADERS = \
	VG/openvg.h \
	VG/vgext.h \
	VG/vgplatform.h \
	VG/vgu.h

cutilsincludedir = $(includedir)/android/cutils
cutilsinclude_HEADERS = \
	android/cutils/native_handle.h

systemincludedir = $(includedir)/android/system
systeminclude_HEADERS = \
	android/system/window.h \
	android/system/graphics.h

hardwareincludedir = $(includedir)/android/hardware
hardwareinclude_HEADERS = \
	android/hardware/fb.h \
	android/hardware/gralloc.h \
	android/hardware/hardware.h \
	android/hardware/sensors.h \
	android/hardware/lights.h
