eglincludedir = $(includedir)/EGL
eglinclude_HEADERS = \
	EGL/egl.h \
	EGL/eglext.h \
	EGL/eglmesaext.h \
	EGL/eglplatform.h

glesincludedir = $(includedir)/GLES
glesinclude_HEADERS = \
	GLES/egl.h \
	GLES/gl.h \
	GLES/glext.h \
	GLES/glplatform.h

gles2includedir = $(includedir)/GLES2
gles2include_HEADERS = \
	GLES2/gl2.h \
	GLES2/gl2ext.h \
	GLES2/gl2platform.h

khrincludedir = $(includedir)/KHR
khrinclude_HEADERS = \
	KHR/khrplatform.h

clincludedir = $(includedir)/CL
clinclude_HEADERS = \
	CL/cl_ext.h \
	CL/cl_gl_ext.h \
	CL/cl_gl.h \
	CL/cl.h \
	CL/cl.hpp \
	CL/cl_platform.h \
	CL/opencl.h

vgincludedir = $(includedir)/VG
vginclude_HEADERS = \
	VG/openvg.h \
	VG/vgext.h \
	VG/vgplatform.h \
	VG/vgu.h

uiincludedir = $(includedir)/hybris/ui
uiinclude_HEADERS = \
	hybris/ui/ui_compatibility_layer.h

surface_flingerincludedir = $(includedir)/hybris/surface_flinger
surface_flingerinclude_HEADERS = \
	hybris/surface_flinger/surface_flinger_compatibility_layer.h

inputincludedir = $(includedir)/hybris/input
inputinclude_HEADERS = \
	hybris/input/input_stack_compatibility_layer_codes_key.h \
	hybris/input/input_stack_compatibility_layer_flags.h \
	hybris/input/input_stack_compatibility_layer_flags_key.h \
	hybris/input/input_stack_compatibility_layer_flags_motion.h \
	hybris/input/input_stack_compatibility_layer.h

cameraincludedir = $(includedir)/hybris/camera
camerainclude_HEADERS = \
	hybris/camera/camera_compatibility_layer_capabilities.h \
	hybris/camera/camera_compatibility_layer_configuration_translator.h \
	hybris/camera/camera_compatibility_layer.h

propertiesincludedir = $(includedir)/hybris/properties
propertiesinclude_HEADERS = \
	hybris/properties/properties.h

mediaincludedir = $(includedir)/hybris/media
mediainclude_HEADERS = \
	hybris/media/media_compatibility_layer.h \
	hybris/media/media_codec_layer.h \
	hybris/media/media_codec_list.h \
	hybris/media/media_format_layer.h \
	hybris/media/media_recorder_layer.h \
	hybris/media/surface_texture_client_hybris.h \
	hybris/media/recorder_compatibility_layer.h

dlfcnincludedir = $(includedir)/hybris/dlfcn
dlfcninclude_HEADERS = \
	hybris/dlfcn/dlfcn.h
