egl_headers = [
  'EGL/egl.h',
  'EGL/eglext.h',
  'EGL/eglmesaext.h',
  'EGL/eglplatform.h',
]
install_headers(egl_headers, subdir : 'EGL')

gles_headers = [
  'GLES/egl.h',
  'GLES/gl.h',
  'GLES/glext.h',
  'GLES/glplatform.h',
]
install_headers(gles_headers, subdir : 'GLES')

gles2_headers = [
  'GLES2/gl2.h',
  'GLES2/gl2ext.h',
  'GLES2/gl2platform.h',
]
install_headers(gles2_headers, subdir : 'GLES2')

gles3_headers = [
  'GLES3/gl3.h',
  'GLES3/gl31.h',
  'GLES3/gl32.h',
  'GLES3/gl3platform.h',
]
install_headers(gles3_headers, subdir : 'GLES3')

khr_headers = [
  'KHR/khrplatform.h',
]
install_headers(khr_headers, subdir : 'KHR')

cl_headers = [
  'CL/cl_ext.h',
  'CL/cl_gl_ext.h',
  'CL/cl_gl.h',
  'CL/cl.h',
  'CL/cl_platform.h',
  'CL/cl_version.h',
  'CL/opencl.h',
]
install_headers(cl_headers, subdir : 'CL')

ui_headers = [
  'hybris/ui/ui_compatibility_layer.h',
]
install_headers(ui_headers, subdir : 'hybris/ui')

surface_flinger_headers = [
  'hybris/surface_flinger/surface_flinger_compatibility_layer.h',
]
install_headers(surface_flinger_headers, subdir : 'hybris/surface_flinger')

hwc2_headers = [
  'hybris/hwc2/hwc2_compatibility_layer.h',
]
install_headers(hwc2_headers, subdir : 'hybris/hwc2')

input_headers = [
  'hybris/input/input_stack_compatibility_layer_codes_key.h',
  'hybris/input/input_stack_compatibility_layer_flags.h',
  'hybris/input/input_stack_compatibility_layer_flags_key.h',
  'hybris/input/input_stack_compatibility_layer_flags_motion.h',
  'hybris/input/input_stack_compatibility_layer.h',
]
install_headers(input_headers, subdir : 'hybris/input')

camera_headers = [
  'hybris/camera/camera_compatibility_layer_capabilities.h',
  'hybris/camera/camera_compatibility_layer_configuration_translator.h',
  'hybris/camera/camera_compatibility_layer.h',
]
install_headers(camera_headers, subdir : 'hybris/camera')

properties_headers = [
  'hybris/properties/properties.h',
]
install_headers(properties_headers, subdir : 'hybris/properties')

media_headers = [
  'hybris/media/media_compatibility_layer.h',
  'hybris/media/media_codec_layer.h',
  'hybris/media/media_codec_list.h',
  'hybris/media/media_format_layer.h',
  'hybris/media/media_recorder_layer.h',
  'hybris/media/surface_texture_client_hybris.h',
  'hybris/media/recorder_compatibility_layer.h',
  'hybris/media/media_codec_source_layer.h',
  'hybris/media/media_message_layer.h',
  'hybris/media/media_buffer_layer.h',
  'hybris/media/media_meta_data_layer.h',
]
install_headers(media_headers, subdir : 'hybris/media')

dlfcn_headers = [
  'hybris/dlfcn/dlfcn.h',
]
install_headers(dlfcn_headers, subdir : 'hybris/dlfcn')

common_headers = [
  'hybris/common/binding.h',
  'hybris/common/floating_point_abi.h',
  'hybris/common/dlfcn.h',
  'hybris/common/hooks.h',
]
install_headers(common_headers, subdir : 'hybris/common')
